# haskell-code-explorer

./: .gitignore  .gitmodules  .travis.yml  LICENSE  README.md  cabal.project  cabal.project.freeze  haskell-code-explorer.cabal  install.hs  stack-8.0.2.yaml  stack-8.2.2.yaml  stack-8.4.3.yaml  stack-8.4.4.yaml  stack-8.6.3.yaml  stack-8.6.4.yaml  stack-8.6.5.yaml  stack-8.8.1.yaml  stack-8.8.3.yaml  stack.yaml
.circleci/: config.yml
app/: Indexer.hs  Server.hs  Store.hs
javascript/: .eslintrc.js  README.md  bower.json  ember-cli-build.js  package.json  testem.js
javascript/app/: app.js  index.html  router.js
javascript/app/components/: bottom-panel.js  expression-info.js  file-tree.js  haskell-module.js  identifier-info.js  identifier-name.js  infinite-list.js  info-window.js  input-with-autocomplete.js  instance-info.js  paginated-list.js  resizable-panel.js  text-file.js  type-component.js  type-signature-text.js  type-signature.js
javascript/app/controllers/: application.js  package.js  packages.js  search.js
javascript/app/controllers/package/: index.js  search.js
javascript/app/controllers/package/show/: file.js
javascript/app/routes/: application.js  package.js  packages.js  search.js
javascript/app/routes/package/: index.js  search.js
javascript/app/routes/package/show/: file.js  index.js
javascript/app/services/: settings.js  store.js
javascript/app/styles/: app.scss
javascript/app/templates/: application.hbs  bad-url.hbs  package.hbs  packages.hbs  search.hbs
javascript/app/templates/components/: bottom-panel.hbs  expression-info.hbs  file-tree.hbs  haskell-module.hbs  identifier-info.hbs  identifier-name.hbs  infinite-list.hbs  info-window.hbs  input-with-autocomplete.hbs  instance-info.hbs  paginated-list.hbs  resizable-panel.hbs  text-file.hbs  type-component.hbs  type-signature-text.hbs  type-signature.hbs
javascript/app/templates/package/: index.hbs  search.hbs
javascript/app/templates/package/show/: file.hbs
javascript/app/utils/: api-urls.js  color-themes.js  go-to-definition.js  language-extensions.js  line-selection.js
javascript/config/: environment.js
javascript/release/: index.html
javascript/release/assets/: haskell-code-explorer-060c353f5a98a943d1b8f634eb163900.js  haskell-code-explorer-086793a1205857156d8bfbc2fac4fd26.js  haskell-code-explorer-132e5ea09a5eb8889a4b7fe11ee25e98.js  haskell-code-explorer-19079cde21bf9ef72bfcdf717db9fdb8.css  haskell-code-explorer-224452e183f8ac468a53c658de1158f9.css  haskell-code-explorer-3325784c864ca6662b97be678eeea861.js  haskell-code-explorer-34448b7bb72ad51077d179819e196bc5.css  haskell-code-explorer-3d39e91b34416d3534fc157f2ee0f2bf.js  haskell-code-explorer-46bd497264adc3247a39cf5bea86cfe4.css  haskell-code-explorer-580feffefaa893bb3f63fd622016179c.js  haskell-code-explorer-717832df8786392c9b8a9bd8010463d2.css  haskell-code-explorer-7473ab64643f48019c68ec4624ce37cb.css  haskell-code-explorer-873b9555a1d2ec9b0c1ce4b759caed2a.js  haskell-code-explorer-9b8d73768b21277f76caa017bbab1072.js  haskell-code-explorer-aa72d669597a18d4939ae094dd5f9fe6.js  haskell-code-explorer-b6816e707d6a18a95e0b32435dd0d7fa.js  haskell-code-explorer-c3c743371eab2471f055e45a74d95581.js  haskell-code-explorer-cad5fb9792387f6cfc24f131065ceaab.js  haskell-code-explorer-ccd883475aa3282a52a13803a5002651.js  haskell-code-explorer-cff19d7cdb347b9386b11d73dd548487.css  haskell-code-explorer-d2bc4f36fcf13e651c8f4a3bf5e2946b.js  haskell-code-explorer-debcceb70f1c19709c0d69e7b338e19e.js  haskell-code-explorer-e559d9fd3736016971c14f6951c7de54.css  haskell-code-explorer-ea7d07239bc88f9e4da6ef043aee6838.css  haskell-code-explorer-eba87ffd1ccd8c48f990d63192cd4538.js  haskell-code-explorer-ebeefa21cb57ebb5e560b2908b57c7a1.js  haskell-code-explorer-f7f4bfc85d03709e38fddce7106b4991.js  haskell-code-explorer-fe9c6239cc656d4e3e8497bddbf694e8.js  vendor-1da6cdb46c95e61ce73ee429881d2b12.js  vendor-50f07db367a389f7f8439a88095598a3.js  vendor-61c2b6995db771bb0e33f39a71767638.css  vendor-b97a1e7d03d00bb4514dc45da44b51ff.js  vendor-c68699fa3ef851ebff1b584737d944c2.css  vendor-d4b94e799d060c228d5d738458f6246a.js
javascript/server/: index.js
javascript/server/mocks/: packages.js
javascript/tests/: index.html
javascript/tests/acceptance/: haskell-module-test.js  package-test.js  packages-test.js
src/HaskellCodeExplorer/: GhcUtils.hs  ModuleInfo.hs  PackageInfo.hs  Preprocessor.hs  Types.hs
src/HaskellCodeExplorer/AST/: RenamedSource.hs  TypecheckedSource.hs
test/: Main.hs
test/data/: File.hs  File1.hs  File2.hs  File3.hs  FileAfterPreprocessor.hs
test/test-package/: stack-8.4.3.yaml  stack-8.4.4.yaml  stack-8.6.3.yaml  stack-8.6.5.yaml  stack.yaml  test-package.cabal
test/test-package/app/: Main.hs
test/test-package/src/: Lib.hs  Types.hs
