name:           test-package
version:        0.1.0.0
description:    Test package
build-type:     Simple
cabal-version:  >= 1.10
library
  hs-source-dirs:
      src
  build-depends:
      base >=4.7 && <5
  exposed-modules:
      Lib
  other-modules:
      Types
      Paths_test_package
  default-language: Haskell2010
executable test-package-exe
  main-is: Main.hs
  hs-source-dirs:
      app
  build-depends:
      base >=4.7 && <5
    , test-package
  default-language: Haskell2010
test-suite test-package-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  hs-source-dirs:
      test
  build-depends:
      base >=4.7 && <5
    , test-package
  default-language: Haskell2010
